--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,47 +1,34 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&display=swap');
+
+
+
+/* SCROLLBAR STYLE */
+::-webkit-scrollbar {
+  height: 5px;
+  width: 5px;
+  background: var(--scrollbackground);
+  /* -webkit-border-radius: 1ex; */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+::-webkit-scrollbar-thumb {
+  background: var(--orange);
+  -webkit-border-radius: 1ex;
+}
+
+::-webkit-scrollbar-corner {
+  background: var(--background);
 }
 
 body {
-  background-image: url('./images/bg.png');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
-  min-height: 100vh;
-}
+  --scrollbackground: #ADBADA;
+  /* FOR BACKGROUND OF SCROLL-BAR  */
+  --orange: #3D52A1;
+  /* COLOR OF SCROLL-THUMB */
+  --background: #EEF7FF;
+  /*  */
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
+  background-color: var(--background);
+  font-family: "Kalam", cursive;
+  font-weight: 400;
+  font-style: normal;
 }
